# scvp_playground

./: CMakeLists.txt  README
Exercise_2/: CMakeLists.txt  exor.h  exor_main.cpp  mon.h  nand_main.cpp  stim.h
Exercise_3/: CMakeLists.txt  main.cpp  state_machine.h  stimuli.cpp  stimuli.h
Exercise_4/: CMakeLists.txt  main.cpp  place.h  subnet.h  transition.h
Exercise_5/: CMakeLists.txt  kpn.h  main.cpp
Exercise_6/: CMakeLists.txt  bus.h  bus_multi_socket.h  main.cpp  memory.h  processor.h
Exercise_8/: CMakeLists.txt  initiator.h  main.cpp  memory_manager.cpp  memory_manager.h  target.h  tlm2_base_protocol_checker.h  util.h
TP_F/FIFO/: fifo.h
TP_F/MovingAverage/: Moving_Average.h  dflip.h  main.cpp  stim.h
TP_F/MultipassthroughBlocking/: main.cpp  memory.h
TP_F/MultipassthroughBlockingStatic/: bus.h  main.cpp  memory.h  processor.h
TP_F/RS_Latch/: RS_Latch.h
TP_F/TLM-LT/: tlm_lt.h
TP_S/FIFOChannel/: fifo_channel.h
TP_S/MovingAverage/: dflip.h  main.cpp  stim.h
TP_S/Multi_Passthrough_Socket/: multi_passthrough_socket.cpp
TP_S/RS_Latch/: main.cpp
